Updates to coho projected LRP results

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -349,7 +349,7 @@ Forward projections of each of the five CUs with the Interior Fraser Coho SMU we
 
 Stock recruitment parameters for all five CUs were drawn from joint posterior distributions obtained by fitting the two stock recruit models described in Section \@ref(cohoSgen) (Ricker and Ricker_priorCap) to available spawner-recruit data using Bayesian Markov Chain Monte Carlo (MCMC) estimation. Bayesian estimation was done using tmbStan (Kristensen 2019), which is an R package that allows MCMC samples to be drawn from a TMB model object using rStan (Guo et al. 2020). Three MCMC chains were run for 14,000 iterations, with the first half of each chain excluded from the final posterior sample. Resulting joint posterior distributions included 21,000 samples. Posterior sampling was initiated at the MLE estimates for each model formulation. Neither model showed signs of convergence failure based on our examination of Rhat and effective sample size diagnostics, as well as visual inspections of marginal posterior distributions. Marginal posterior distributions for each of the four stock recruitment parameters ($\alpha$, $\beta$, $\gamma$, and $\sigma$) are provided in Appendix xx. 
 
-The two stock recruitment models, Ricker and Ricker_priorCap, were treated as two alternative hypotheses about stock recruitment dynamics, which we refer to as operating models.
+The two stock recruitment models, Ricker and Ricker_priorCap, were treated as two alternative hypotheses about stock recruitment dynamics, which we refer to as operating models. Additional sensitivity analyses described below were only done using the base Ricker model.
 
 
 *Covariance in recruitment residuals*
@@ -366,7 +366,7 @@ knitr::include_graphics("figure/coho-RecuitResidCorrelation-Ricker.png")
 
 *Variability in marine survival coefficient among CUs*
 
-When fitting spawner recuit models to data, we followed the approach of @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 in assuming that all CUs experienced the same marine survival rate for given sea-entry year, and that the marine survival coefficient, $\gamma$, was constant both among CUs and among years.  When projecting CUs forward, we maintained this assumption in our base case by generating a single marine survival rate for each sea entry year and setting $\sigma_{\gamma}$ = 0, where $\sigma_{\gamma}$ is the standard deviation of among-CU variability in $\gamma$ such that $\gamma_i \sim Normal(\bar{\gamma}, \sigma_{\gamma})$. We used sensitivity analyses on $\sigma_{\gamma}$ to test the effect of changes in recruitment covariation among CUs on projected LRP estimates. Four alternative levels of $\sigma_{\gamma}$ were used in sensitivity analyses: $\sigma_{\gamma}$ = 0.0225, 0.045, 0.0675, and 0.09. We selected these levels to cover a range between 0 and 0.09, where 0.09 was the standard deviation of the estimated marginal posterior distribution for $\gamma$ from our Ricker stock recruitment model fit. 
+When fitting spawner recuit models to data, we followed the approach of @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 in assuming that all CUs experienced the same marine survival rate for given sea-entry year, and that the marine survival coefficient, $\gamma$, was constant both among CUs and among years.  When projecting CUs forward, we maintained this assumption in our base case by generating a single marine survival rate for each sea entry year and setting $\sigma_{\gamma}$ = 0, where $\sigma_{\gamma}$ is the standard deviation of among-CU variability in $\gamma$ such that $\gamma_i \sim Normal(\bar{\gamma}, \sigma_{\gamma})$. We used sensitivity analyses on $\sigma_{\gamma}$ to test the effect of changes in spawner abundance covariation among CUs on projected LRP estimates. Three alternative levels of $\sigma_{\gamma}$ were used in sensitivity analyses: $\sigma_{\gamma}$ = 0.045, 0.0675, and 0.09. We selected these levels to cover a range between 0 and 0.09, where 0.09 was the standard deviation of the estimated marginal posterior distribution for $\gamma$ from our Ricker stock recruitment model fit. 
 
 The resulting correlations in spawner abundances from the projections are shown in Figure \@ref(fig:coho-sigGammaCorrelation). In the forward projections, pairwise correlations in projected spawner abundances among CUs for the base case assumption of $\sigma_{\gamma}$ = 0 were similar to observed pairwise correlations in spawner abundances among CUs. Increasing $\sigma_{\gamma}$ resulted in decreased among-CU correlation in projected spawner abundances.
 
@@ -441,13 +441,11 @@ Extirpation threshold &  2 & Mating constraint \\
 
 ***LRP Estimates***
 
-Aggregate abundance-based LRPs estimated using the Ricker model as a basis for forward projections were lower than those obtained when the Ricker_priorCap model was used, regardless of which probability threshold was used to derive the LRP (Figure \@ref:fig(coho-projLRPCurve-byOM), Table \@ref(tab:projectedLRPs2020)). This result is similar to the logistic regression-based LRPs, where LRPs derived using $S_{gen}$ estimates from the Ricker_priorCap model were higher due to higher $S_{gen}$ values.  The projected curve showing the probability of all CUs being above $S_gen$ was more gradual and further to the right for the Ricker_priorCap model compared to the base Ricker model (Figure \@ref:fig(coho-projLRPCurve-byOM). When projection outputs from both stock recruit model formulations were combined prior to binning in order to create a model-averaged scenario (with equal weight assigned to both scenarios), the resulting probability curve was mid-way between the curves from the two individual models. In all cases, projected curves had higher scatter with increasing aggregate abundance, such that LRP estimates at probability thresholds of p = 0.90 and p = 0.99 were unstable.
+Aggregate abundance-based LRPs estimated using the Ricker model as a basis for forward projections were lower than those obtained when the Ricker_priorCap model was used, regardless of which probability threshold was used to derive the LRP (Figure \@ref:fig(coho-projLRPCurve-byOM), Table \@ref(tab:projectedLRPs2020)). This result is similar to the logistic regression-based LRPs, where LRPs derived using $S_{gen}$ estimates from the Ricker_priorCap model were higher due to higher $S_{gen}$ values.  The projected curve showing the probability of all CUs being above $S_{gen}$ was more gradual and further to the right for the Ricker_priorCap model compared to the base Ricker model (Figure \@ref:fig(coho-projLRPCurve-byOM). When projection outputs from both stock recruit model formulations were combined prior to binning in order to create a model-averaged scenario (with equal weight assigned to both scenarios), the resulting probability curve was mid-way between the curves from the two individual models. In all cases, projected curves had higher scatter with increasing aggregate abundance, such that LRP estimates at probability thresholds of p = 0.90 and p = 0.99 were unstable.
 
-
-```{r coho-projLRPCurve-byOM, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances within bins of 200 fish for two different stock recruit model options (Ricker and Ricker\\_priorCap) as well as a model averaged case (Combined) in which results from both stock recruit models were equally weighted. Results are derived from projections over 30 years and 20,000 MC Trials. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted. Each dot is the proportion of MC trials where all CUs were > lower benchmarks.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+```{r coho-projLRPCurve-byOM, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances within bins of 200 fish for two different stock recruit model options (Ricker and Ricker\\_priorCap) as well as a model averaged case (Combined) in which results from both stock recruit models were equally weighted. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > lower benchmarks. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-projLRPCurve-byOM.png")
 ```
-
 
 
 +-------------+-----------------+-------------------+-----------------+
@@ -462,24 +460,28 @@ knitr::include_graphics("figure/coho-projLRPCurve-byOM.png")
 | 99%         | 75,100          | 87,300            | 83,500
 +-------------+-----------------+-------------------+-----------------+
 
-Table: (\#tab:projectedLRPs2020) Aggregate abundance based LRPs (with 95% confidence intervals) from -------. For each probability level, the LRP estimate represents that probability that all CUs will be above their lower benchmark.
+Table: (\#tab:projectedLRPs2020) Projection-based LRPs from forward projections under two different stock recruit model options (Ricker and Ricker\\_priorCap), as well as a model averaged case (Combined) in which results from both stock recruit models were equally weighted. For each probability level, the LRP estimate represents that probability that all CUs will be above their lower benchmark of $S_{gen}$.
 
+Generational average spawning abundance (based on a 3-year geometric mean) remained above the projection-based LRP derived using the Ricker model with a probability threshold of p = 0.5 for most years between 2000 and 2020. There were two years in which aggregate spawning abundance dropping below the LRP: 2006 and 2007 (Figure \@ref:fig(coho-AggEscpSeries-wProjLRP). In comparison, when projection-based LRPs were derived using the Ricker_priorCap model with p = 0.5, aggregate spawning abundance remained below the LRP for 11 out of the 21 years. 
 
-
+```{r coho-AggEscpSeries-wProjLRP, fig.cap="Three-year geometric mean of aggregate spawning abundance for the Interior Fraser Coho SMU (black line) relative to projection-based LRP estimates using two different stock recruitment model formulations,Ricker and Ricker\\_priorCap, with a probability threshold of p = 0.5. Forward projections used to estimate reference points were parameterized using available 1998-2020 time series under base model assumptions.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+knitr::include_graphics("figure/coho-EscpSeries-wProjLRP.png")
+```
 
 
 ***Sensitivity Analyses***
 
+Increasing $\sigma_{\gamma}$, which corresponded with reduced between-CU correlation in spawner abundances over time (Figure \@ref(fig:coho-sigGammaCorrelation)), resulted in a flattening of the projected relationship between aggregate spawer abundances and the probability of all CUs being above their lower benchmarks. LRP estimates corresponding to a given probability threshold increased as $\sigma_{\gamma}$ increased as curves shifted to the right and became more gradual (i.e., less steep). For the two highest $\sigma_{\gamma}$ scenarios examined ($\sigma_{\gamma}$=0.0675 and 0.09), a 99% probability of all CUs being above their lower $S_{gen}$ benchmark was never achieved.            
 
-
-
-```{r coho-projLRPCurve-bySigGamma, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances within bins of 200 fish for----. Results are derived from projections over 30 years and 20,000 MC Trials. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted. Each dot is the proportion of MC trials where all CUs were > lower benchmarks.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+```{r coho-projLRPCurve-bySigGamma, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances (within bins of 200 fish) for alternative scenarios about the value of sigGamma. The baseline value used for forward projections was sigGamma = 0. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > Sgen.  Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-projLRPCurve-bySigGamma.png")
 ```
 
+Increasing the average exploitation rate used in forward projections also led to a shift in projected curves to the right; however, the shift was more gradual over the range fo exploitation rate scenarios we considered than the effect of increasing $\sigma_{\gamma}$ (Figure \@ref(fig:coho-projLRPCurve-byER)). The effect of increasing exploitation rates was smallest at low probability thresholds. At p = 0.5, the LRP differed by 400 fish between the ER = 2.5% and ER = 12.5% scenarios (range = 19,700 - 21,000), and by < 4000 fish among all four scenarios (range = 19,700 - 24,000). Differences were much larger among the four exploitation rate levels examined for the p = 0.90 threshold. When the average exploitation rate was set at 22.5% or 32.5%, aggregate abundances barely exceeded 60,000 fish, and it was not possible to achieve a 99% probability of all CUs being above their lower $S_{gen}$ benchmarks.               
 
 
-```{r coho-projLRPCurve-byER, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances within bins of 200 fish for----. Results are derived from projections over 30 years and 20,000 MC Trials. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted. Each dot is the proportion of MC trials where all CUs were > lower benchmarks.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+
+```{r coho-projLRPCurve-byER, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances (within bins of 200 fish) for alternative scenarios about average exploitation rates (ER) in forward projections. The baseline value used for forward projections was ER = 12.5%. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > Sgen.  Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 ```
 
