--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -19,7 +19,7 @@ While aggregate abundance-based LRPs are consistent with what is typically used 
 
 When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above poor status. We use two different methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review). <!--CH: In the Guidelines paper, I would like to add text that aggregate-abundance based LRPs may not need to be identified explicitly for harvest management, if HCRs are identified and evaluated to have a low probability of CUs breaching their lower benchmarks. We might want to pull this thread through the Introduction of the case study paper or better yet here in Ch2 here when abundance-based LRPs are mentioned. Something like  "While aggregate-abundance based LRPs can be used as part of, or to inform harvest control rules for fisheries management, more complex harvest control rules that include for example, time-area closures to limit CU-specific harvests may better achieve the underlying objective of maintaining CU statuses above red (as described in Holt et al. (in review))".  I will include similar, but expanded text in the Guidelines paper, referring to the Groundfish MP Framework) --> 
 
-The above definitions hinge on what defines 'poor' CU status. In the case of WSP Integrated Status Assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone [@canadaCanadaPolicyConservation2005; @grant2017FraserSockeye2020]. While WSP Integrated status assessments are typically intensive expert-driven processes, we demonstrate the application of a multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (cite Pestal et all tech report). When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on a single lower benchmark <!--CH: "on abundances--> that has been identified as important for individual CUs <!--CH: can we remove "for individual CUs"?--> by local experts. <!--CH: suggest adding to more precisely capture Sue's concerns... "While the multidimensional scanning tool better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric, abundances relative to a lower benchmark to demonstrate how in most cases the multidimensional scanning tool reduces to this metric. Exceptions are described in the application to case studies."--> A variety of methods are available for estimating lower benchmarks <!--CH "on abundances"--> depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020]<!--CH: as described in Holt et al. (in review)". 
+The above definitions hinge on what defines 'poor' CU status. In the case of WSP Integrated Status Assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone [@canadaCanadaPolicyConservation2005; @grant2017FraserSockeye2020]. While WSP Integrated status assessments are typically intensive expert-driven processes, we demonstrate the application of a multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (cite Pestal et all tech report). When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on a single lower benchmark <!--CH: "on abundances--> that has been identified as important for individual CUs <!--CH: can we remove "for individual CUs"?--> by local experts. <!--CH: suggest adding to more precisely capture Sue's concerns... "While the multidimensional scanning tool better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric, abundances relative to a lower benchmark to demonstrate how in most cases the multidimensional scanning tool reduces to this metric. Exceptions are described in the application to case studies."--> A variety of methods are available for estimating lower benchmarks <!--CH "on abundances"--> depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020]<!--CH: as described in Holt et al. (in review)". -->
  
 <!--
   CW: Reference, is the WSP author DFO or Canada? I have seen it cited in both ways in CSAS papers, and I think I was using the DFO version as it is what Julie Marentette used in her 2021 papers.-- should I change it to the canada citation  (@canadaCanadaPolicyConservation2005) ?
@@ -184,7 +184,7 @@ CW: Is the quasi R2 the same as the pseudo R2?  If yes a common reference is:
 Dobson AJ and Barnett AG (2008) An Introduction to Generalized Linear Models. Third Edition. Chapman & Hall/CRC Press. 
 
 pseudoR2 is described on page 137 of the book http://www.ru.ac.bd/wp-content/uploads/sites/25/2019/03/202_06_Dobson_An-Introduction-to-Generalized-Linear-Models-2008.pdf
-It looks the same, when compared to https://bookdown.org/egarpor/SSS2-UC3M/logreg-deviance.html, but mabe I'm missing something?
+It looks the same, when compared to https://bookdown.org/egarpor/SSS2-UC3M/logreg-deviance.html, but maybe I'm missing something?
 
 
 
