--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -58,7 +58,7 @@ Even before the royal assent of the revised fisheries act in 2019, many fisherie
 
 
 <!--
-Are there any examples of integrates assessments for Pink salmon? I could not find any. 
+CW: Are there any examples of integrates assessments for Pink salmon? I could not find any. 
 -->
 
 LRPs can be based on multiple stock metrics, including abundance trends, abundance, fishing mortality, and habitat distribution [@chaputConsiderationsDefiningReference2012]. In some instances, multi-dimensional approaches are also used. These approaches are particularly relevant when traditional benchmarks are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multi-dimensional approaches allow for consideration of multiple data sources and the explicit inclusion of expert knowledge in defining LRPs. In Canada,  multi-dimensional managements benchmarks have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab reference points incorporate information from CPUE estimates, egg clutches and discards to extends the scope of precaution and efficacy of the management framework. In the case study paper (Holt et al. in review), the multi-dimensional assessment approach introduced by (cite Pestal tech report) is used to approximate the integrated status assessments for Pacific salmon CUs, and these status assessments are then used as basis to estimate SMU LRPs.  
